<resources>
    <string name="app_name">NFingers</string>
    <string name="action_settings">Settings</string>
    <string name="swipe_to_confirm">Swipe to confirm</string>
    <string name="lift_your_finger">Please lift your finger</string>
    <string name="size_duration">%1$s/%2$s</string>
    <string name="please_wait">Please wait</string>
    <string name="lockpassword_cancel_label">Cancel</string>
    <string name="lockpassword_alternate_label">Alternate</string>
    <string name="sensor_problem_use_alt_method">Sensor problem, please use alternate method</string>
    <string name="verification_failed">Verification failed</string>
    <string name="fingerprint_captured">Fingerprint captured</string>
    <string name="sensor_removed">Sensor has been removed</string>
    <string name="sensor_not_found">Sensor not found</string>
    <string name="lockscreen_too_many_failed_attempts_countdown">Try again in %d seconds.</string>
    <string name="lockpassword_confirm_your_pattern_header">Confirm your pattern</string>
    <string name="lockpattern_need_to_unlock">Confirm saved pattern</string>
    <string name="lockpattern_need_to_unlock_footer" />
    <string name="lockpattern_need_to_unlock_wrong">Try again:</string>
    <string name="lockpattern_need_to_unlock_wrong_footer" />
    <string name="lockpattern_too_many_failed_confirmation_attempts_header">Too many incorrect attempts!</string>
    <string name="lockpattern_too_many_failed_confirmation_attempts_footer">Try again in %d seconds.</string>
    <string name="enrollment">Enrollment</string>
    <string name="fingerprint_options">Fingerprint Options</string>
    <string name="enroll_fingerprint">Enroll Fingerprint</string>
    <string name="register_fingerprint_for_security">Register a fingerprint for security</string>
    <string name="set_alt_method">Set Alternate Method</string>
    <string name="alternate_method"> Alternate Method</string>
    <string name="setup_pattern_pin_pwd">Setup a pattern, PIN, or password</string>
    <string name="remove_enrolled_fingers">Remove Enrolled Fingers</string>
    <string name="clear_alt_method_erase_all_fingers">Clear alternate method and erase all enrolled fingerprints</string>
    <string name="done">Done</string>
    <string name="setup_alt_method_to_finish">Setup alternate method to finish</string>
    <string name="enroll_finger_to_register_unlock">Please enroll finger to register fingerprint for screen unlock.</string>
    <string name="enroll_finger_to_finish">Enroll fingerprint to finish</string>
    <string name="alternate_not_set">Alternate: Not Set</string>
    <string name="pattern">Pattern</string>
    <string name="pin">Pin</string>
    <string name="password">Password</string>
    <string name="alternate_pattern">Alternate: PATTERN</string>
    <string name="alternate_pin">Alternate: PIN</string>
    <string name="alternate_password">Alternate: PASSWORD</string>
    <string name="alternate_notset">Alternate: Not Set</string>
    <string name="retry">Retry</string>
    <string name="remove_all_fingerprints">Remove all enrolled fingerprints? (Cannot be undone)</string>
    <string name="error">Error</string>
    <string name="please_try_again">Please try again</string>
    <string name="swipe_to_enroll">Swipe to enroll</string>
    <string name="please_swipe">Please swipe</string>
    <string name="enrollment_failed">Enrollment failed</string>
    <string name="too_many_bad_swipes">Too many bad swipes</string>
    <string name="enrollment_success">Enrollment success</string>
    <string name="finger_previously_enrolled">Fingerprint has been previously enrolled</string>
    <string name="mather_add_image_failed">Matcher add image failed</string>
    <string name="verification_success">Verification success</string>
    <string name="practice_mode">Practice Mode</string>
    <string name="watch_video">Please watch the video</string>
    <string name="all_fingers_enrolled">All fingers were enrolled.\nPlease remove fingerprints to enroll new.</string>
    <string name="good_swipe">Good swipe</string>
    <string name="bad_swipe_too_fast">Bad swipe: Too fast</string>
    <string name="bad_swipe_too_slow">Bad swipe: Too slow</string>
    <string name="bad_swipe_default">Bad swipe: Follow finger animation</string>
    <string name="loading">Loading...</string>
    <string name="lockpassword_set_alternate_unlock_header">Set alternate unlock</string>
    <string name="percentage">%d %%</string>
    <string name="lockpassword_ok_label">OK</string>
    <string name="lockpattern_tutorial_cancel_label">Cancel</string>
    <string name="lockpattern_tutorial_continue_label">Next</string>
    <string name="next_label">Next</string>
    <string name="dlg_ok">OK</string>
    <string name="yes">"Yes"</string>
    <string name="no">"No"</string>
    <string name="lockpassword_choose_your_password_header">Choose your password</string>
    <string name="lockpassword_choose_your_pattern_header">Choose your pattern</string>
    <string name="lockpassword_choose_your_pin_header">Choose your PIN</string>
    <string name="lockpassword_confirm_your_password_header">Confirm your password</string>
    <string name="lockpassword_confirm_your_pin_header">Confirm your PIN</string>
    <string name="lockpassword_confirm_passwords_dont_match">Passwords don\'t match</string>
    <string name="lockpassword_confirm_pins_dont_match">PINs don\'t match</string>
    <string name="lockpattern_recording_inprogress">Release finger when done.</string>
    <string name="cancel">Cancel</string>
    <string name="lockpattern_retry_button_text">Retry</string>
    <string name="lockpattern_continue_button_text">Continue</string>
    <string name="lockpattern_confirm_button_text">Confirm</string>
    <string name="lockpattern_recording_intro_header">Draw an unlock pattern:</string>
    <string name="lockpattern_pattern_entered_header">Pattern recorded.</string>
    <string name="lockpattern_need_to_confirm">Draw pattern again to confirm:</string>
    <string name="lockpattern_pattern_confirmed_header">Your new unlock pattern:</string>
    <string name="lockpattern_settings_help_how_to_record">How to draw an unlock pattern</string>
    <string name="lockpattern_recording_incorrect_too_short">Connect at least %d dots. Try again:</string>
    <string name="lockpassword_continue_label">Continue</string>
    <string name="lockpassword_illegal_character">Password contains an illegal character.</string>
    <string name="lockpassword_password_too_short">Password must be at least %d characters</string>
    <string name="lockpassword_pin_too_short">PIN must be at least %d digits</string>
    <string name="lockpassword_password_too_long">Password must be fewer than %d characters.</string>
    <string name="lockpassword_pin_too_long">PIN must be fewer than %d digits.</string>
    <string name="lockpassword_password_requires_alpha">Password must contain at least one letter.</string>
    <string name="lockpassword_password_requires_digit">Password must contain at least one digit.</string>
    <string name="lockpassword_password_recently_used">Device administrator doesn\'t allow using a recent password.</string>
    <string name="lockpassword_pin_recently_used">Device administrator doesn\'t allow using a recent PIN.</string>
    <string name="lockpassword_press_continue">Touch Continue when done</string>
    <string name="lockpattern_change_lock_fingerprint_label">Change unlock fingerprint</string>
    <string name="lockpassword_pin_contains_non_digits">PIN must contain only digits 0-9.</string>
    <string name="please_place_or_swipe">please_place_or_swipe</string>
    <string name="place_or_swipe_to_enroll">place_or_swipe_to_enroll</string>
    <plurals name="lockpassword_password_requires_letters">
        <item quantity="one">Password must contain at least 1 letter.</item>
        <item quantity="other">Password must contain at least %d letters.</item>
    </plurals>
    <plurals name="lockpassword_password_requires_numeric">
        <item quantity="one">Password must contain at least 1 numerical digit.</item>
        <item quantity="other">Password must contain at least %d numerical digits.</item>
    </plurals>
    <plurals name="lockpassword_password_requires_lowercase">
        <item quantity="one">Password must contain at least 1 lowercase letter.</item>
        <item quantity="other">Password must contain at least %d lowercase letters.</item>
    </plurals>
    <plurals name="lockpassword_password_requires_uppercase">
        <item quantity="one">Password must contain at least 1 uppercase letter.</item>
        <item quantity="other">Password must contain at least %d uppercase letters.</item>
    </plurals>
    <plurals name="lockpassword_password_requires_symbols">
        <item quantity="one">Password must contain at least 1 special symbol.</item>
        <item quantity="other">Password must contain at least %d special symbols.</item>
    </plurals>
    <plurals name="lockpassword_password_requires_nonletter">
        <item quantity="one">Password must contain at least 1 non-letter character.</item>
        <item quantity="other">Password must contain at least %d non-letter characters.</item>
    </plurals>
    <string name="please_encroll">请先录入指纹</string>
    <string name="please_set_pwd">请先设置密码</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="please_input_pwd_again">确认密码</string>
    <string name="not_equals">两次输入的密码不一致,请重新输入！</string>
    <string name="password_not_equals">密码错误,请重新输入！</string>
    <string name="setting_pwd_success">密码设置成功！</string>
    <string name="login_success">登录成功！</string>
    <string name="input_again">重输</string>
    <string name="test1">数字键盘1</string>
    <string name="test2">数字键盘2</string>
    <string name="test3">数字键盘3</string>
    <string name="dialog_title">提示</string>
    <string name="dialog_msg">请选择类型：</string>
    <string name="dialog_ok">设置密码</string>
    <string name="dialog_cancel">登录</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="neigh">9</string>
    <string name="newchip">NEWSCHIP Semiconductor Co.LTD.</string>
    <string name="forget_mima">忘记密码？</string>
    <string name="forget_mima_and_reset">请到设置中清除应用数据</string>
    <string name="hello_world">Hello world!</string>
    <string name="numeric_keyboard_down">numeric keyboard down</string>
    <string name="numeric_keyboard_up">numeric keyboard up</string>
    <string name="numeric_keyboard_cancel">numeric keyboard cancel</string>
    <string name="remove_confirm">确定要删除 %s ?</string>
    <string name="choose_app">选择应用</string>
    <string name="app_lock">应用锁</string>
    <string name="app_may_be_locked">可对应用加锁,保护您的隐私信息</string>
    <string name="manager_finger_print">管理指纹</string>
    <string name="enroll_or_remove_finger_print">录入或者删除指纹信息</string>
    <string name="about_app">关于</string>
    <string name="show_app_info">查看应用信息</string>
    <string name="hide_app">伪装应用</string>
    <string name="app_may_hide_in_other_app">将应用伪装在另外一个应用之下</string>
    <string name="switch_app">快速切换应用</string>
    <string name="open_switch_app">开启快速切换应用</string>
    <string name="open_protect_app">开启应用锁</string>
    <string name="switch_app_content">设置指纹和应用关联，可快速切换应用</string>
    <string name="hidden_file">隐藏文件</string>
    <string name="hidden_file_content">隐藏或显示照片视频，保护您的资料</string>
    <string name="hided_app">已伪装的应用</string>
    <string name="ok">确定</string>
    <string name="rename">重命名</string>
    <string name="delete">删除</string>
    <string name="finger">指纹 %d</string>
    <string name="finger_name_defualt">指纹</string>
    <string name="finger_usage">该指纹可用于解锁</string>
</resources>