<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/rlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#46A32A"
        android:paddingBottom="8dip"
        android:paddingTop="8dip" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/enroll_fingerprint"
            android:textSize="20dip" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@mipmap/negative_button"
            android:text="@string/no"
            android:textSize="20dip" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@mipmap/negative_button"
            android:text="@string/ok"
            android:textSize="20dip" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_above="@id/buttons"
        android:layout_height="wrap_content"
        android:text="@string/remove_all_fingerprints" />

</RelativeLayout>