<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <Button android:id="@+id/alternate_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:layout_alignParentLeft="true"/>

    <!-- spacing line below header -->
    <View
        android:id="@+id/spacer_bottom"
        android:layout_width="fill_parent"
        android:layout_height="0.1dip"
        android:layout_below="@id/alternate_button"
        android:layout_marginTop="6dip"
        android:background="@android:drawable/divider_horizontal_dark"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spacer_bottom"
        android:orientation="vertical"
        android:gravity="center">

        <Button android:id="@+id/pattern_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_alignParentLeft="true"
            android:text="@string/pattern"
            android:onClick="onClick"/>

        <Button android:id="@+id/pin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_alignParentRight="true"
            android:text="@string/pin"
            android:onClick="onClick"/>

        <Button android:id="@+id/password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_alignParentRight="true"
            android:text="@string/password"
            android:onClick="onClick"/>

    </LinearLayout>

    <!-- buttons -->
    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@android:drawable/bottom_bar">

        <Button android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_alignParentRight="true"
            android:onClick="onClick"/>

    </RelativeLayout>

</RelativeLayout>
